--- a/Pravis_Teliken/Pravis_Teliken.csproj
+++ b/Pravis_Teliken/Pravis_Teliken.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Handler\FileHandler.cs" />
     <Compile Include="Pages\Admin.cs">
       <SubType>UserControl</SubType>
     </Compile>
