--- a/Pravis_Teliken/Pravis_Teliken.csproj
+++ b/Pravis_Teliken/Pravis_Teliken.csproj
@@ -104,6 +104,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AfspraakMaken.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AfspraakMaken.Designer.cs">
+      <DependentUpon>AfspraakMaken.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -144,6 +150,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AfspraakMaken.resx">
+      <DependentUpon>AfspraakMaken.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
